--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 bevy = "0.11"
 bevy_ecs_tilemap = "0.11.1"
+noise = "0.8.2"
 num-derive = "0.4.1"
 num-traits = "0.2.17"
 rand = "0.8.5"
